--- a/Pond_Entrepreneurship.html
+++ b/Pond_Entrepreneurship.html
@@ -4,6 +4,7 @@
         <link href="bootstrap-4.1.2-dist/css/bootstrap.css" type="text/css" 
         rel="stylesheet">
         <title>Maggie Pond Was Here</title>
+        <link href="images/Icon.jpg" rel="icon" type="image/x-icon">
     </head>
     <body>
         <div class="container">
@@ -47,31 +48,33 @@
                     </p>
                     <div class="indent">
                         <p>
-                          The Entrepreneurship Project is a project assigned yearly
+                          The Entrepreneurship Project is a project assigned
+                          yearly
                           to all engineering 
-                          students. It concerns the development of a new solution
-                          to solve a widely 
+                          students. It concerns the development of a new
+                          solution to solve a widely 
                           experienced problem. Depending on the problem, the
                           deliverables for this 
                           project could range from a working prototype to a well
                           developed idea for one.
-                          My team (team Wake up, Breakfast Robot!) choose to address
-                          oversleeping and 
-                          therefore skipping breakfast or consuming a substandard
-                          breakfast. We chose to
-                          solve this problem by building and programming a prototype
-                          that makes cereal, 
+                          My team (team Wake up, Breakfast Robot!) choose to
+                          address oversleeping and 
+                          therefore skipping breakfast or consuming a
+                          substandard breakfast. We chose to
+                          solve this problem by building and programming a
+                          prototype that makes cereal, 
                           brings it to the user, wakes the user, and gives them
                           cereal. For this project
-                          I was a primary builder. I built the platform, attached
-                          the grabbing mechanism, 
+                          I was a primary builder. I built the platform,
+                          attached the grabbing mechanism, 
                           made and attached the multi directional wheels, and
                           assisted in the build of 
-                          the poking mechanism. I organized the build and came in
-                          almost everyday during
-                          lunch or Gael to work on the robot. During this project
-                          I showed great leadership
-                          and perseverance as a primary builder for the project. <br><br>
+                          the poking mechanism. I organized the build and came
+                          in almost everyday during
+                          lunch or Gael to work on the robot. During this
+                          project I showed great leadership
+                          and perseverance as a primary builder for the project.
+                          <br><br>
                           Documentation: <a href= "https://docs.google.com/document/d/1alpXOxPnaZ4BvAnP-zx7Tr4g0wFRf5iE3VTYQEgKao8/edit" target="_blank">Here</a><br>
                           Presentation: <a href= "https://docs.google.com/presentation/d/141B3dfa11ksVmD9HN2Q_7-iqbVj-YkIgNcEtqy8ePXw/edit" target="_blank">Here</a>
                         </p>
@@ -106,14 +109,16 @@
                     </div>
                     <div class="col-sm-2">
                         <a href="Pond_ContactMe.html">
-                             <img src="images/insta.png" height="100px" width="100px">
+                             <img src="images/insta.png" height="100px" 
+                             width="100px">
                         </a>
                     </div>
                     <div class="col-sm-6">
                     </div>
                     <div class="col-sm-2">
                         <a href="Pond_ContactMe.html">
-                            <img class="ml-auto" src="images/twitter2.png" height="100px">
+                            <img class="ml-auto" src="images/twitter2.png"
+                            height="100px">
                         </a>
                     </div>
                 </div>
