--- a/Pond_WinchProject.html
+++ b/Pond_WinchProject.html
@@ -4,6 +4,7 @@
         <link href="bootstrap-4.1.2-dist/css/bootstrap.css" type="text/css" 
         rel="stylesheet">
         <title>Maggie Pond Was Here</title>
+        <link href="images/Icon.jpg" rel="icon" type="image/x-icon">
     </head>
     <body>
         <div class="container">
