--- a/Pond_WorkExperience.html
+++ b/Pond_WorkExperience.html
@@ -3,6 +3,7 @@
         <link href="bootstrap-4.1.2-dist/css/bootstrap.css" type="text/css" 
         rel="stylesheet">
         <title>Maggie Pond Was Here</title>
+        <link href="images/Icon.jpg" rel="icon" type="image/x-icon">
     </head>
     <body>
         <div class="container">
@@ -54,26 +55,36 @@
                     <div class="indent">
                         <p>
                             The majority of my work experience has taught and 
-                            motivated me to be a respectful, cooperative coworker.
+                            motivated me to be a respectful, cooperative
+                            coworker.
                             Mrs. Sharbach, my eighth grade teacher (2015-2016), 
-                            taught me and my classmates to fair, respectful people.
+                            taught me and my classmates to fair, respectful
+                            people.
                             While Mrs. Sharbach was, officially, my English and 
                             History teacher, she was our collective mentor; she 
                             pushed us to become better people, chastised us when 
-                            we were rude, and helped us grow academically. She told
+                            we were rude, and helped us grow academically. She
+                            told
                             us what she thought, why she thought it, and never 
                             looked at us as 'just students'. At times, honestly,
-                            she did push us too hard but always made sure we were
-                            learning and growing as both students and human beings.
-                            Mrs. Sharbach is the epitome of an amazing teacher. She
-                            encouraged us to give back to our community to anyone 
+                            she did push us too hard but always made sure we
+                            were
+                            learning and growing as both students and human
+                            beings.
+                            Mrs. Sharbach is the epitome of an amazing teacher.
+                            She
+                            encouraged us to give back to our community to
+                            anyone 
                             and everyone. She forced us to work with people we 
-                            wouldn't typically work with so we would learn to work
+                            wouldn't typically work with so we would learn to
+                            work
                             with anyone and everyone. She made all of us more 
-                            flexible, cooperative and respectful people and I can 
-                            honestly say I would be a complete failure at all three
+                            flexible, cooperative and respectful people and I
+                            can honestly say I would be a complete failure at
+                            all three
                             had I not been in her class. As she liked to say she 
-                            had always taught us to be good people', and I know that
+                            had always taught us to be good people', and I know
+                            that
                             today I am both a better person and a better worker 
                             because of her.
                         </p>
@@ -91,11 +102,13 @@
                             one's coworkers. To me, the lecture on emotional 
                             intelligence was particularly important as the ability
                             to respect one's coworkers is an essential but 
-                            underestimated skill. After this, we were shown around 
+                            underestimated skill. After this, we were shown
+                            around 
                             campus and what struck me most was how absolutely 
                             beautiful the campus was and, to me it seemed, how 
                             little menial labor
-                            was being performed even in the workplace areas. It also
+                            was being performed even in the workplace areas. It
+                            also
                             struck me how employees were allowed to draw on the 
                             walls as a means of communication or play. Overall, 
                             the campus appeared to be a collection of tranquil, 
@@ -105,17 +118,21 @@
                             behavior. What I learnt on this field trip was that 
                             work doesn't have to be laborious as long as one is 
                             willing to cooperate and respect one's coworkers to 
-                            get work done. To reiterate, from these experiences I 
+                            get work done. To reiterate, from these experiences
+                            I 
                             have learnt to be respectful, cooperative worker.
                         </p>
                     </div>
                     <div class="indent">
                         <p>
-                            From my volunteer experience that concerns, primarily,
-                            interacting with children I have bettered my patience 
+                            From my volunteer experience that concerns,
+                            primarily,
+                            interacting with children I have bettered my
+                            patience 
                             and communicative skills. I started volunteering at 
-                            Crosspoint Church in November of 2018. From my volunteer 
-                            work, I can confidently say that I would make cooperative
+                            Crosspoint Church in November of 2018. From my
+                            volunteer work, I can confidently say that I would
+                            make cooperative
                             and well-organized employee capable even of assuming 
                             leadership roles when necessary.
                         </p>
@@ -146,14 +163,16 @@
                     </div>
                     <div class="col-sm-2">
                         <a href="Pond_ContactMe.html">
-                             <img src="images/insta.png" height="100px" width="100px">
+                             <img src="images/insta.png" height="100px" 
+                             width="100px">
                         </a>
                     </div>
                     <div class="col-sm-6">
                     </div>
                     <div class="col-sm-2">
                         <a href="Pond_ContactMe.html">
-                            <img class="ml-auto" src="images/twitter2.png" height="100px">
+                            <img class="ml-auto" src="images/twitter2.png" 
+                            height="100px">
                         </a>
                     </div>
                 </div>
