--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
     <head>
         <link href="bootstrap-4.1.2-dist/css/bootstrap.css" type="text/css" 
         rel="stylesheet">
+        <title>Maggie Pond Was Here</title>
         <link href="carousel.css" rel="stylesheet">
+        <link href="images/Icon.jpg" rel="icon" type="image/x-icon">
     </head>
     <body>
       <div class="container">
@@ -39,11 +41,14 @@
           <div class="carousel-item active">
             <img class="d-block w-100" src="images/firework.gif" 
             alt="First slide" height="600px">
-            <div class="carousel-caption-bet black">
-               <h1 class="black">Welcome to Maggie Pond's Portfolio </h1>
-              <p class="black">
-                A creative, interpersonal individual, dedicated to optimal work 
-                completion.
+            <div class="carousel-caption-bet">
+               <h1>Welcome to Maggie Pond's Portfolio </h1>
+              <p>
+                <strong>
+                  A creative, interpersonal individual, dedicated to optimal
+                  work 
+                  completion.
+                </strong>
               </p> 
               <a href="Pond_AboutMe.html">
                 <button type="button" class="btn btn-primary">
@@ -59,8 +64,10 @@
               <h1>Entrepreneurship Project</h1>
               <h5>Real world experience at school</h5>
               <p>
-                During this project I showed great leadership
-                and perseverance as a primary builder for the project.
+                <strong>
+                  During this project I showed great leadership
+                  and perseverance as a primary builder for the project.
+                </strong>
               </p>
               <a href="Pond_Entrepreneurship.html">
                 <button type="button" class="btn btn-primary">
