--- a/Pond_AboutMe.html
+++ b/Pond_AboutMe.html
@@ -4,6 +4,7 @@
         <link href="bootstrap-4.1.2-dist/css/bootstrap.css" type="text/css" 
         rel="stylesheet">
         <title>Maggie Pond Was Here</title>
+        <link href="images/Icon.jpg" rel="icon" type="image/x-icon">
     </head>
     <body>
         <div class="container">
@@ -58,17 +59,20 @@
                         <p> 
                             I am currently a Junior at Dublin High School. I am
                             taking an advanced math course (Trigonometry With 
-                            Pre-Calculus) and advanced life science (Honors Anatomy)
+                            Pre-Calculus) and advanced life science (Honors
+                            Anatomy)
                             course along with an engineering course (Computer 
                             Science Principles). As a Freshman I took a graphic 
-                            design course (2-D Drawing and Design) that went over 
-                            the basics of visual 
+                            design course (2-D Drawing and Design) that went
+                            over the basics of visual
                             aesthetics and patterns, before being recruited into 
                             the Engineering Academy in my Sophmore year. Despite 
-                            being an academy student, I have very little engineering
-                            experience.However, over the years, I have been taught 
-                            to persevereand learn how to do things along the way
-                            - by my family, teachers, and fellow students, therefore
+                            being an academy student, I have very little
+                            engineering experience. However, over the years, I
+                            have been taught to
+                            persevere and learn how to do things along the way
+                            - by my family, teachers, and fellow students,
+                            therefore
                             giving me the tools to overcome new and exciting 
                             challenges. I am able to persevere, encourage and 
                             cooperate with others, contribute ideas, and write 
@@ -77,24 +81,34 @@
                     </div>
                     <div class="indent">
                         <p>
-                            Despite having few engineering experiences, I believe I 
-                            have been particularly useful on a POE project (1.3.2) 
+                            Despite having few engineering experiences, I
+                            believe I 
+                            have been particularly useful on a POE project
+                            (1.3.2) 
                             where we were asked to build a prototype of a car. 
-                            Although I did not create the original design or lead 
+                            Although I did not create the original design or
+                            lead 
                             the team, I fixed an infuriating problem (friction 
                             caused by leading sprocket pushing chain against 
-                            platform) with the gear and sprocket system that powered
-                            the wheels to a prototype of a car. This allowed me and 
-                            my team to move forward in fixing the motor and finding 
-                            new ways to installthe cells to the platform of the car.
+                            platform) with the gear and sprocket system that
+                            powered
+                            the wheels to a prototype of a car. This allowed me
+                            and my team to move forward in fixing the motor and
+                            finding 
+                            new ways to install the cells to the platform of the
+                            car.
                             It also allowed the gears to turn and therefore the 
-                            wheels to move. In the future, I would like be a video 
-                            game programmer and or webpage designer seeing as I find
-                            both graphic design and computer programming 
+                            wheels to move. In the future, I would like be a
+                            video 
+                            game programmer and or webpage designer seeing as I
+                            find both graphic design and computer programming 
                             particularly interesting.
-                            Although my future prospects are completely unrelated
-                            to mechanical engineering, it combines two interests of 
-                            mine that are relatively impossible to combine otherwise.
+                            Although my future prospects are completely
+                            unrelated
+                            to mechanical engineering, it combines two interests
+                            of 
+                            mine that are relatively impossible to combine
+                            otherwise.
                         </p>
                     </div>
                 </div>
@@ -123,14 +137,16 @@
                     </div>
                     <div class="col-sm-2">
                         <a href="Pond_ContactMe.html">
-                             <img src="images/insta.png" height="100px" width="100px">
+                             <img src="images/insta.png" height="100px" 
+                             width="100px">
                         </a>
                     </div>
                     <div class="col-sm-6">
                     </div>
                     <div class="col-sm-2">
                         <a href="Pond_ContactMe.html">
-                            <img class="ml-auto" src="images/twitter2.png" height="100px">
+                            <img class="ml-auto" src="images/twitter2.png" 
+                            height="100px">
                         </a>
                     </div>
                 </div>
