--- a/Pond_ContactMe.html
+++ b/Pond_ContactMe.html
@@ -4,6 +4,7 @@
         <link href="bootstrap-4.1.2-dist/css/bootstrap.css" type="text/css" 
         rel="stylesheet">
         <title>Maggie Pond Was Here</title>
+        <link href="images/Icon.jpg" rel="icon" type="image/x-icon">
     </head>
     <body>
         <div class="container">
@@ -85,14 +86,16 @@
                     </div>
                     <div class="col-sm-2">
                         <a href="Pond_ContactMe.html">
-                             <img src="images/insta.png" height="100px" width="100px">
+                             <img src="images/insta.png" height="100px" 
+                             width="100px">
                         </a>
                     </div>
                     <div class="col-sm-6">
                     </div>
                     <div class="col-sm-2">
                         <a href="Pond_ContactMe.html">
-                            <img class="ml-auto" src="images/twitter2.png" height="100px">
+                            <img class="ml-auto" src="images/twitter2.png" 
+                            height="100px">
                         </a>
                     </div>
                 </div>
