--- a/Pond_Entrepreneurship.html
+++ b/Pond_Entrepreneurship.html
@@ -81,8 +81,15 @@
                     </div>
                 </div>
                 <div class="col-sm-3">
-                    <img class="border-for-img" src="images/cereal.jpg" 
-                    width="200px" height="200px">
+                    <div>
+                        <img class="image custom-range border-for-img contactme-img" 
+                        src="images/cereal.jpg" width="200px" height="200px">
+                        <a class="contactmebutton" href="Pond_ContactMe.html">
+                            <button class="btn btn-primary">
+                                Contact Me!
+                            </button>
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
@@ -102,23 +109,24 @@
         <div class="container">
             <div class="jumbotron col-sm-12">
                 <div class="row">
-                  <div class="col-sm-2">
+                    <div class="col-sm-2 foot">
                         <a href="Pond_ContactMe.html">
-                            <img src="images/face.png" height="100px">
+                            <img class="footer-img" src="images/face.png" 
+                            height="100px">
                         </a>
                     </div>
-                    <div class="col-sm-2">
+                    <div class="col-sm-2 foot">
                         <a href="Pond_ContactMe.html">
-                             <img src="images/insta.png" height="100px" 
-                             width="100px">
+                             <img class="footer-img" src="images/insta.png" 
+                             height="100px" width="100px">
                         </a>
                     </div>
                     <div class="col-sm-6">
                     </div>
-                    <div class="col-sm-2">
+                    <div class="col-sm-2 foot">
                         <a href="Pond_ContactMe.html">
-                            <img class="ml-auto" src="images/twitter2.png"
-                            height="100px">
+                            <img class="ml-auto footer-img" 
+                            src="images/twitter2.png" height="100px">
                         </a>
                     </div>
                 </div>
