--- a/Pond_ContactMe.html
+++ b/Pond_ContactMe.html
@@ -38,7 +38,7 @@
         <!--banner starts here-->
         <div class="jumbotron col-sm-12 text-center">
            <h1>Contact Me</h1>
-           <p>Address: Dublin Claifornia</p>
+           <p>Address: Dublin California</p>
            <p>Email: maggiepond888@gmail.com</p>
         </div>
         <!--banner ends here-->
@@ -79,23 +79,24 @@
         <div class="container">
             <div class="jumbotron col-sm-12">
                 <div class="row">
-                    <div class="col-sm-2">
+                    <div class="col-sm-2 foot">
                         <a href="Pond_ContactMe.html">
-                            <img src="images/face.png" height="100px">
+                            <img class="footer-img" src="images/face.png" 
+                            height="100px">
                         </a>
                     </div>
-                    <div class="col-sm-2">
+                    <div class="col-sm-2 foot">
                         <a href="Pond_ContactMe.html">
-                             <img src="images/insta.png" height="100px" 
-                             width="100px">
+                             <img class="footer-img" src="images/insta.png" 
+                             height="100px" width="100px">
                         </a>
                     </div>
                     <div class="col-sm-6">
                     </div>
-                    <div class="col-sm-2">
+                    <div class="col-sm-2 foot">
                         <a href="Pond_ContactMe.html">
-                            <img class="ml-auto" src="images/twitter2.png" 
-                            height="100px">
+                            <img class="ml-auto footer-img" 
+                            src="images/twitter2.png" height="100px">
                         </a>
                     </div>
                 </div>
