--- a/Pond_AboutMe.html
+++ b/Pond_AboutMe.html
@@ -43,6 +43,7 @@
             <div class="row">
                 <div class="col-sm-3">
                     <div>
+                        <!--allows image animation-->
                         <img class="image custom-range border-for-img" 
                         src="images/bio.png" width="200px" height="200px">
                         <a class="contactmebutton" href="Pond_ContactMe.html">
@@ -51,6 +52,7 @@
                             </button>
                         </a>
                     </div>
+                    <!--animation ends here-->
                     <h1 class="justify-self">Email:</h1>
                     <p>maggiepond888@gmail.com</p>
                 </div>
@@ -130,26 +132,32 @@
         <div class="container">
             <div class="jumbotron col-sm-12">
                 <div class="row">
+                    <!--allows footer animation-->
                     <div class="col-sm-2 foot">
                         <a href="Pond_ContactMe.html">
                             <img class="footer-img" src="images/face.png" 
                             height="100px">
                         </a>
                     </div>
+                    <!--animation ends here-->
+                    <!--allows footer animation-->
                     <div class="col-sm-2 foot">
                         <a href="Pond_ContactMe.html">
                              <img class="footer-img" src="images/insta.png" 
                              height="100px" width="100px">
                         </a>
                     </div>
+                    <!--animation ends here-->
                     <div class="col-sm-6">
                     </div>
+                    <!--allows footer animation-->
                     <div class="col-sm-2 foot">
                         <a href="Pond_ContactMe.html">
                             <img class="ml-auto footer-img" 
                             src="images/twitter2.png" height="100px">
                         </a>
                     </div>
+                    <!--animation ends here-->
                 </div>
             </div>
         </div>
