--- a/Pond_Entrepreneurship.html
+++ b/Pond_Entrepreneurship.html
@@ -82,6 +82,7 @@
                 </div>
                 <div class="col-sm-3">
                     <div>
+                        <!--allows image animation-->
                         <img class="image custom-range border-for-img contactme-img" 
                         src="images/cereal.jpg" width="200px" height="200px">
                         <a class="contactmebutton" href="Pond_ContactMe.html">
@@ -109,26 +110,32 @@
         <div class="container">
             <div class="jumbotron col-sm-12">
                 <div class="row">
+                    <!--allows footer animation-->
                     <div class="col-sm-2 foot">
                         <a href="Pond_ContactMe.html">
                             <img class="footer-img" src="images/face.png" 
                             height="100px">
                         </a>
                     </div>
+                    <!--animation ends here-->
+                    <!--allows footer animation-->
                     <div class="col-sm-2 foot">
                         <a href="Pond_ContactMe.html">
                              <img class="footer-img" src="images/insta.png" 
                              height="100px" width="100px">
                         </a>
                     </div>
+                    <!--animation ends here-->
                     <div class="col-sm-6">
                     </div>
+                    <!--allows footer animation-->
                     <div class="col-sm-2 foot">
                         <a href="Pond_ContactMe.html">
                             <img class="ml-auto footer-img" 
                             src="images/twitter2.png" height="100px">
                         </a>
                     </div>
+                    <!--animation ends here-->
                 </div>
             </div>
         </div>
