--- a/index.html
+++ b/index.html
@@ -205,25 +205,31 @@
     <footer>
       <div class="jumbotron col-sm-12">
         <div class="row">
+          <!--allows footer animation-->
           <div class="col-sm-2 foot">
             <a href="Pond_ContactMe.html">
               <img class="footer-img" src="images/face.png" height="100px">
             </a>
           </div>
+          <!--animation ends here-->
+          <!--allows footer animation-->
           <div class="col-sm-2 foot">
             <a href="Pond_ContactMe.html">
               <img class="footer-img" src="images/insta.png" height="100px" 
               width="100px">
             </a>
           </div>
+          <!--animation ends here-->
           <div class="col-sm-6">
           </div>
+          <!--allows footer animation-->
           <div class="col-sm-2 foot">
             <a href="Pond_ContactMe.html">
               <img class="ml-auto footer-img" src="images/twitter2.png" 
               height="100px">
             </a>
           </div>
+          <!--animation ends here-->
         </div>
       </div>
     </footer>
