--- a/Pond_ContactMe.html
+++ b/Pond_ContactMe.html
@@ -46,6 +46,7 @@
             <div class="row">
                 <div class="col-sm-3">
                     <div>
+                        <!--allows footer animation-->
                         <img class="contactme-img image border-for-img" 
                         src="images/cookies.jpg" width="200px" height="200px">
                         <a class="contactmebutton" href="index.html">
@@ -54,6 +55,7 @@
                             </button>
                         </a>
                     </div>
+                    <!--animation ends here-->
                 </div>
                 <div class="col-sm-9">
                     <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSf5eCSl0FzuRbLOKM3k4qMy0lZ-2ODKBTOmdF7fSOt04Q8CdA/viewform?embedded=true" width="640" height="766" frameborder="0" marginheight="0" marginwidth="0">
@@ -79,26 +81,33 @@
         <div class="container">
             <div class="jumbotron col-sm-12">
                 <div class="row">
+                    <!--allows footer animation-->
                     <div class="col-sm-2 foot">
                         <a href="Pond_ContactMe.html">
                             <img class="footer-img" src="images/face.png" 
                             height="100px">
                         </a>
                     </div>
+                    <!--animation ends here-->
+                    <!--allows footer animation-->
                     <div class="col-sm-2 foot">
                         <a href="Pond_ContactMe.html">
                              <img class="footer-img" src="images/insta.png" 
                              height="100px" width="100px">
                         </a>
                     </div>
+                    <!--allows footer animation-->
+                    <!--animation ends here-->
                     <div class="col-sm-6">
                     </div>
+                    <!--allows footer animation-->
                     <div class="col-sm-2 foot">
                         <a href="Pond_ContactMe.html">
                             <img class="ml-auto footer-img" 
                             src="images/twitter2.png" height="100px">
                         </a>
                     </div>
+                    <!--animation ends here-->
                 </div>
             </div>
         </div>
