--- a/Pond_Resume.html
+++ b/Pond_Resume.html
@@ -165,26 +165,32 @@
         <div class="container">
             <div class="jumbotron col-sm-12">
                 <div class="row">
+                    <!--allows footer animation-->
                     <div class="col-sm-2 foot">
                         <a href="Pond_ContactMe.html">
                             <img class="footer-img" src="images/face.png" 
                             height="100px">
                         </a>
                     </div>
+                    <!--animation ends here-->
+                    <!--allows footer animation-->
                     <div class="col-sm-2 foot">
                         <a href="Pond_ContactMe.html">
                              <img class="footer-img" src="images/insta.png" 
                              height="100px" width="100px">
                         </a>
                     </div>
+                    <!--animation ends here-->
                     <div class="col-sm-6">
                     </div>
+                    <!--allows footer animation-->
                     <div class="col-sm-2 foot">
                         <a href="Pond_ContactMe.html">
                             <img class="ml-auto footer-img" 
                             src="images/twitter2.png" height="100px">
                         </a>
                     </div>
+                    <!--animation ends here-->
                 </div>
             </div>
         </div>
