--- a/Pond_WorkExperience.html
+++ b/Pond_WorkExperience.html
@@ -42,6 +42,7 @@
             <div class="row">
                 <div class="col-sm-3">
                     <div>
+                        <!--allows image animation-->
                         <img class="image custom-range border-for-img" 
                         src="images/bio.png" width="200px" height="200px">
                         <a class="contactmebutton" href="Pond_ContactMe.html">
@@ -49,6 +50,7 @@
                                 Contact Me!
                             </button>
                         </a>
+                        <!--animation ends here-->
                     </div>
                 </div>
                 <div class="col-sm-9">
@@ -156,26 +158,32 @@
         <div class="container">
             <div class="jumbotron col-sm-12">
                 <div class="row">
+                    <!--allows footer animation-->
                     <div class="col-sm-2 foot">
                         <a href="Pond_ContactMe.html">
                             <img class="footer-img" src="images/face.png" 
                             height="100px">
                         </a>
                     </div>
+                    <!--animation ends here-->
+                    <!--allows footer animation-->
                     <div class="col-sm-2 foot">
                         <a href="Pond_ContactMe.html">
                              <img class="footer-img" src="images/insta.png" 
                              height="100px" width="100px">
                         </a>
                     </div>
+                    <!--animation ends here-->
                     <div class="col-sm-6">
                     </div>
+                    <!--allows footer animation-->
                     <div class="col-sm-2 foot">
                         <a href="Pond_ContactMe.html">
                             <img class="ml-auto footer-img" 
                             src="images/twitter2.png" height="100px">
                         </a>
                     </div>
+                    <!--animation ends here-->
                 </div>
             </div>
         </div>
