--- a/Pond_WorkExperience.html
+++ b/Pond_WorkExperience.html
@@ -52,6 +52,10 @@
                         </a>
                         <!--animation ends here-->
                     </div>
+                    <div>
+                        <h1>Skills</h1><br>
+                        <h5>Art, Communication & leadership</h5>
+                    </div>
                 </div>
                 <div class="col-sm-9">
                     <div class="indent">
